--- a/ping.yml
+++ b/ping.yml
@@ -1,5 +1,5 @@
 ---
-- name: Check if a server is alive
+- name: Check if a Linux server is alive
   hosts: all
   tasks:
   - name: Log into the server and check that the ping modules returns output
